k8s/services/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: kmotion-server
spec:
  selector:
    app: kmotion-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
